# MagicTower

./: .gitignore  CMakeLists.txt  config.txt  resources.qrc
gamedata/entity/: air.txt  door.txt  herodata.txt  item.txt  monster.txt  stair.txt  wall.txt
gamedata/map/: map0.txt  map1.txt  map2.txt  map4.txt
src/: Config.cpp  DataManager.cpp  DataManager.h  Entity.h  GameWidget.cpp  GameWidget.h  ImageManager.cpp  ImageManager.h  MapLoader.h  config.h  game.cpp  game.h  gameimage.h  main.cpp  mainwindow.cpp  mainwindow.h
